Fix z-index for nav drop down on user search

--- a/app/assets/stylesheets/admin/header-footer.scss
+++ b/app/assets/stylesheets/admin/header-footer.scss
@@ -195,6 +195,8 @@
   }
 
   .dropdown-menu {
+    z-index: 1001;
+
     @include screen-sm-max {
       border-radius: 0;
       background: $black;
